mongo atala inplementatzen