@@ -40,42 +40,29 @@ javafx {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
-
-//    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+//     https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
 //    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'
 
-    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
-    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'
+
+    // https://mvnrepository.com/artifact/org.mongodb/mongodb-driver
+//    compile group: 'org.mongodb', name: 'mongodb-java-driver', version: '3.8.1'
+//    compile 'org.mongodb:mongodb-driver:3.8.1'
+//    compile 'org.mongodb:mongo-java-driver:3.8.1'
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
+dependencies {
+    compile 'org.mongodb:mongo-java-driver:3.8.1'
+}
+
 repositories {
     mavenCentral()
 }
 
 def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED', '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]
 
-jlink {
 
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'whatwebfx'
-        jvmArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',
-                    '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]
-    }
-
-    jpackage {
-        if (javafx.getPlatform().name() == "OSX") {
-            installerType = "dmg"
-            jpackageHome = "/Users/<user>/Downloads/jdk-13.jdk/Contents/Home"
-        } else if (javafx.getPlatform().name() == "WINDOWS") {
-            installerType = "exe"
-            jpackageHome = "C:\\Users\\Gorka\\.sdkman\\candidates\\java\\15.0.1.hs-adpt"
-            installerOptions = ['--win-menu', '--win-shortcut', '--win-dir-chooser']
-        }
-    }
-}
 run {
     inputs.property('moduleName', moduleName)
     doFirst {
